Fix card-action wrap settings
Set white-space to `nowrap` so cards look better.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -390,3 +390,8 @@ code, kbd {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale
 }
+
+.card-action {
+  white-space: nowrap;
+}
+
